
* LUCENE-10633: Added support for dynamic pruning to queries sorted by a string
  field that is indexed with terms and SORTED or SORTED_SET doc values.
  (Adrien Grand)

* LUCENE-10627: Using ByteBuffersDataInput reduce memory copy on compressing data. (luyuncheng)

Bug Fixes
---------------------
* LUCENE-10663: Fix KnnVectorQuery explain with multiple segments. (Shiming Li)

Build
---------------------

* LUCENE-10669: The build should be more helpful when generated resources are touched (Dawid Weiss)

Other
---------------------
* LUCENE-10559: Add Prefilter Option to KnnGraphTester (Kaival Parikh)

======================== Lucene 9.3.0 =======================

API Changes
---------------------

* LUCENE-10603: SortedSetDocValues#NO_MORE_ORDS marked @deprecated in favor of iterating with
  SortedSetDocValues#docValueCount(). (Greg Miller)

* GITHUB#978: Deprecate (remove in Lucene 10) obsolete constants in oal.util.Constants; remove
  code which is no longer executed after Java 9. (Uwe Schindler)

New Features
---------------------
* LUCENE-10550: Add getAllChildren functionality to facets (Yuting Gan)

* LUCENE-10274: Added facetsets module for high dimensional (hyper-rectangle) faceting
(Shai Erera, Marc D'Mello, Greg Miller)

Improvements
---------------------

* LUCENE-10078: Merge on full flush is now enabled by default with a timeout of
  500ms. (Adrien Grand)

* LUCENE-10585: Facet module code cleanup (copy/paste scrubbing, simplification and some very minor
  optimization tweaks). (Greg Miller)

* LUCENE-10603: Update SortedSetDocValues iteration to use SortedSetDocValues#docValueCount().
  (Greg Miller, Stefan Vodita)


* LUCENE-10619: Optimize the writeBytes in TermsHashPerField. (Tang Donghai)

* GITHUB#983: AbstractSortedSetDocValueFacetCounts internal code cleanup/refactoring. (Greg Miller)

Optimizations
---------------------
* LUCENE-8519: MultiDocValues.getNormValues should not call getMergedFieldInfos (Rushabh Shah)
